# mpc_car

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
fat_rolling/: CMakeLists.txt  build.sh
fat_rolling/include/: fat_rolling.h
lib/fat_rolling/: install.sh
